# course_work

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Readme.md  main.cpp
big_int/: CMakeLists.txt  big_int.cpp  big_int.h
big_int/tests/: CMakeLists.txt  big_int_tests.cpp
cubic_spline/: CMakeLists.txt  cubic_spline.cpp  cubic_spline.h
rational/: CMakeLists.txt  rational.cpp  rational.h
rational/tests/: CMakeLists.txt  rational_tests.cpp
tasks/: CMakeLists.txt  tasks.cpp  tasks.h
template_latex/: main_example.tex  titlepage_example.tex
utils/: CMakeLists.txt  utils.cpp  utils.h
utils/tests/: CMakeLists.txt  utils_tests.cpp
